--- a/resources/css/ui-bscard.css
+++ b/resources/css/ui-bscard.css
@@ -1,4 +1,3 @@
-
 .bs-card-wrap input[type="radio"]:checked ~ .bs-card {box-shadow:0.0000vw 0.0000vw 0.5556vw 0.5556vw var(--status-focused)}
 .bs-card {position:relative;border-radius:2.2222vw;border:0.2778vw solid var(--border-8);box-shadow:0.0000vw 0.1389vw 0.0000vw 0.0000vw var(--shadow-gray_1), 0.0000vw 0.5556vw 1.1111vw -0.2778vw var(--shadow-gray_1);-webkit-text-size-adjust:auto;transition:box-shadow 0.3s ease;}
 .bs-card .bs-typeA {background-color:var(--background-bg_lightGray);border-radius:inherit;}
@@ -45,16 +44,20 @@
 .bs-card figure picture img {object-fit:contain;width:100%;height:100%;}
 
 .bs-card .top-logo01 {display:flex;width:18.8889vw;}
-.bs-card .top-logo02 {display:flex;width:38.0556vw;margin-bottom:-2.7778vw;}
-.bs-card .top-logo03 {display:flex;width:31.3889vw;}
+.bs-card .top-logo02 {display:flex;width:37.7778vw;margin-bottom:-2.7778vw;}
+.bs-card .top-logo03 {display:flex;width:31.1111vw;}
 .bs-card .top-aff01 {display:flex;width:19.1667vw;}
 .bs-card .center-logo01 {display:flex;width:21.3889vw;}
-.bs-card .center-cfp {display:flex;width:9.1667vw;}
+.bs-card .center-cfp {display:flex;width:8.8889vw;}
 .bs-card .info-logo01 {display:flex;width:18.8889vw;}
+
 .bs-card .top-logo01 img,
-/* .bs-card .top-logo02 img */
+.bs-card .top-logo02 img,
 .bs-card .top-logo03 img,
 .bs-card .top-aff01 img,
 .bs-card .center-logo01 img,
-/* .bs-card .center-cfp img */
+.bs-card .center-cfp img,
 .bs-card .info-logo01 img {width:100%;}
+.bs-card-wrap.capturing .bs-card {box-shadow:none!important;transition:none!important;overflow:hidden!important;}
+
+/* http://publishing.kr/vw/ */
