--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -102,6 +102,7 @@
 				<button type="button" class="btn-xsmall btn-outlined btn-round">반도체<i class="ico-close-16"></i></button>
 				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-reply"></i>답글</button>
 				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-grid"></i>표 보기</button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-speaker"></i>전체 듣기</button>
 				<div class="btn-xsmall btn-outlined btn-round">
 					<button class="btn-inner">반도체</button>
 					<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
