--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -182,12 +182,12 @@
 .bs-card figure picture {display:flex;width:46px;height:59px;align-items:center;justify-content:center;}
 .bs-card figure picture img {object-fit:contain;width:100%;height:100%;}
 
-.bs-card .top-logo01 {display:flex;width:68px;}
-.bs-card .top-logo02 {display:flex;width:136px;margin-bottom:-10px;}
-.bs-card .top-logo03 {display:flex;width:112px;}
-.bs-card .top-aff01 {display:flex;width:69px;}
-.bs-card .center-logo01 {display:flex;width:77px;}
-.bs-card .center-cfp {display:flex;width:32px;}
+.bs-card .top-logo01 {display:flex;width:68px;height:20px;}
+.bs-card .top-logo02 {display:flex;width:136px;height:31px;margin-bottom:-10px;}
+.bs-card .top-logo03 {display:flex;width:112px;height:15px;}
+.bs-card .top-aff01 {display:flex;width:69px;height:12px;}
+.bs-card .center-logo01 {display:flex;width:77px;height:18px;}
+.bs-card .center-cfp {display:flex;width:32px;height:21px;}
 .bs-card .info-logo01 {display:flex;width:68px;}
 
 .bs-card .top-logo01 img,
@@ -196,7 +196,7 @@
 .bs-card .top-aff01 img,
 .bs-card .center-logo01 img,
 .bs-card .center-cfp img,
-.bs-card .info-logo01 img {width:100%;}
+.bs-card .info-logo01 img {width:100%;object-fit:contain;}
 .bs-card-wrap.capturing .bs-card {box-shadow:none!important;transition:none!important;overflow:hidden!important;}
 
 
