--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -538,7 +538,8 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 /* sticky-content */
 .sticky-content {padding:8px 0;}
 .sticky-content {position:static;background-color:var(--white-100);z-index:var(--sticky-zIndex);top:0;transition:top 0.3s ease;}
-[data-scroll-direction="UP"] main .sticky-content {position:sticky;}
+[data-scroll-direction="UP"] main .sticky-content:not(.sticky-always) {position:sticky;}
+main .sticky-content.sticky-always {position:sticky}
 
 /* snackbar-content */
 .snackbar-content {position:fixed;bottom:-10px;right:-10px;opacity:0;z-index:-1;display:flex;flex-direction:column;gap:14px;padding:14px;transform:scale(0);}
