--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -203,8 +203,8 @@
 										<div class="left">
 											<figure>
 												<picture>
-													<source srcset="/resources/images/bs_card/bs_photo.png">
-													<img src="/resources/images/bs_card/bs_photo.png" alt="">
+													<source srcset="/resources/@temp/thumb_w.png">
+													<img src="/resources/@temp/thumb_w.png" alt="">
 												</picture>
 											</figure>
 											<picture class="center-cfp">
@@ -473,8 +473,8 @@
 										<div class="left">
 											<figure>
 												<picture>
-													<source srcset="/resources/images/bs_card/bs_photo.png">
-													<img src="/resources/images/bs_card/bs_photo.png" alt="">
+													<source srcset="/resources/@temp/thumb_h.png">
+													<img src="/resources/@temp/thumb_h.png" alt="">
 												</picture>
 											</figure>
 											<picture class="center-cfp">
