--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -180,7 +180,7 @@
 .bs-card .bottom ul li {font-size:8px;font-weight:400;color:var(--typography-gray);line-height:1.3;}
 
 .bs-card figure picture {display:flex;width:46px;height:59px;align-items:center;justify-content:center;}
-.bs-card figure picture img {object-fit:contain;width:100%;height:100%;}
+/* .bs-card figure picture img {object-fit:contain;width:100%;height:100%;} */
 
 .bs-card .top-logo01 {display:flex;width:68px;height:20px;}
 .bs-card .top-logo02 {display:flex;width:136px;height:31px;margin-bottom:-10px;}
@@ -618,7 +618,7 @@ button.flag-fluid span {margin-top:0;}
 .fund-diff-detail .diff-table dl.price .fall {display:flex;align-items:center;gap:2px;color:var(--deepblue-600);}
 .fund-diff-detail .diff-table dl.price .fall:before {content:'';flex:0 0 12px;width:12px;height:12px;background:url(/resources/images/ico/ico_triangle_down.svg) center center / contain no-repeat;}
 .fund-diff-detail .diff-table dl.price .steady {display:flex;align-items:center;gap:2px;color:var(--gray-500);}
-.fund-diff-detail .diff-table dl.price .steady:before {content:'';flex:0 0 12px;width:12px;height:12px;background:url(/resources/images/ico/ico_steady.svg) center center / contain no-repeat;}
+/* .fund-diff-detail .diff-table dl.price .steady:before {content:'';flex:0 0 12px;width:12px;height:12px;background:url(/resources/images/ico/ico_steady.svg) center center / contain no-repeat;} */
 .fund-diff-detail .diff-table dl.group-list {}
 .fund-diff-detail .diff-table dl.group-list .list {display:flex;justify-content:space-between;gap:8px;}
 
@@ -915,7 +915,7 @@ button.flag-fluid span {margin-top:0;}
 .stock.fall {display:flex;align-items:center;gap:2px;color:var(--deepblue-600)}
 .stock.fall:before {content:'';flex:0 0 10px;width:10px;height:10px;background:url(/resources/images/ico/ico_triangle_down.svg) center center / contain no-repeat;}
 .stock.steady {display:flex;align-items:center;gap:2px;color:var(--gray-500);}
-.stock.steady:before {content:'';flex:0 0 10px;width:10px;height:10px;background:url(/resources/images/ico/ico_steady.svg) center center / contain no-repeat;}
+/* .stock.steady:before {content:'';flex:0 0 10px;width:10px;height:10px;background:url(/resources/images/ico/ico_steady.svg) center center / contain no-repeat;} */
 
 
 .stock-index-core {border-radius:10px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
@@ -947,6 +947,8 @@ button.flag-fluid span {margin-top:0;}
 }
 .stock-index-list dl dt {font-size:15px;font-weight:500;color:var(--typography-gray);line-height:1;}
 .stock-index-list dl dd {display:block;font-size:18px;font-weight:700;color:var(--typography-black);line-height:1;margin-top:10px;}
+.stock-index-list .stock,
+.stock-index-list .tags {white-space:nowrap;}
 .stock-index-list a > div {display:flex;gap:8px;margin-left:auto;}
 .stock-index-list .stock-remove {position:absolute;right:24px;top:50%;transform:translateY(-50%);background-color:var(--surface-surface)}
 
