--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -226,8 +226,8 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-weekend.datepicker-collapsed .ui-widget.ui-widget-content .ui-datepicker-header {height:14px;overflow:hidden;margin:0 0 16px;}
 .datepicker-weekend.datepicker-collapsed .ui-widget.ui-widget-content table {overflow:hidden;background-color:#ECF6FF;border-radius:8px;padding:2px 16px;}
 .datepicker-weekend.datepicker-collapsed .ui-widget.ui-widget-content table thead {display:none;}
-.datepicker-weekend .ui-widget-content .ui-state-active {border-color:transparent;background-color:transparent;color:var(--typography-body);}
-.datepicker-weekend .ui-widget-content .ui-datepicker-current-day.ui-datepicker-today .ui-state-active {color:var(--brandPrimary-blue600);}
+/* .datepicker-weekend .ui-widget-content .ui-state-active {border-color:transparent;background-color:transparent;color:var(--typography-body);} */
+/* .datepicker-weekend .ui-widget-content .ui-datepicker-current-day.ui-datepicker-today .ui-state-active {color:var(--brandPrimary-blue600);} */
 .datepicker-weekend.datepicker-collapsed .ui-datepicker-calendar td.ui-datepicker-other-month {color:var(--typography-black);}
 .datepicker-weekend.datepicker-collapsed .ui-datepicker .ui-datepicker-title {font-size:14px;line-height:1;color:var(--typography-caption);align-items:center;justify-content:center;}
 
@@ -239,9 +239,9 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-weekend:not(.datepicker-collapsed) .thisWeek td:first-child {border-radius:8px 0 0 8px;}
 .datepicker-weekend:not(.datepicker-collapsed) .thisWeek td:last-child {border-radius:0 8px 8px 0;}
 
-.datepicker-weekend.datepicker-collapsed tbody .thisWeek .ui-datepicker-week-end:first-child > * {color:var(--red-400)!important;}
-.datepicker-weekend.datepicker-collapsed tbody .thisWeek .ui-datepicker-week-end:last-child > * {color:var(--blue-400)!important;}
-.datepicker-weekend.datepicker-collapsed tbody .thisWeek * {pointer-events:none;}
+/* .datepicker-weekend.datepicker-collapsed tbody .thisWeek .ui-datepicker-week-end:first-child > * {color:var(--red-400)!important;}
+.datepicker-weekend.datepicker-collapsed tbody .thisWeek .ui-datepicker-week-end:last-child > * {color:var(--blue-400)!important;} */
+/* .datepicker-weekend.datepicker-collapsed tbody .thisWeek * {pointer-events:none;} */
 
 .datepicker-weekend .thisWeek.selectPrev {animation:dpslideLeftIn .3s cubic-bezier(0, 0, .2, 1);}
 .datepicker-weekend .thisWeek.selectNext {animation:dpslideRightIn .3s cubic-bezier(0, 0, .2, 1);}
