--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -209,8 +209,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-wrap tbody .ui-datepicker-week-end:first-child {color:var(--red-400);}
 .datepicker-wrap tbody .ui-datepicker-week-end:last-child {color:var(--blue-400);}
 .schedule-wrap {position:absolute;left:0;bottom:1px;width:100%;height:6px;display:flex;align-items:center;justify-content:center;gap:2px;}
-.schedule-wrap .sc-label {flex:0 0 6px;width:6px;height:6px;border-radius:50%;animation:scSlideUp 0.3s ease forwards;opacity:0;}
-.thisWeek .schedule-wrap .sc-label {opacity:1;}
+.schedule-wrap .sc-label {flex:0 0 6px;width:6px;height:6px;border-radius:50%;animation:scSlideUp 0.3s ease forwards;}
 .schedule-wrap .sc-label:nth-child(1) {animation-delay:0.2s;}
 .schedule-wrap .sc-label:nth-child(2) {animation-delay:0.4s;}
 .schedule-wrap .sc-label:nth-child(3) {animation-delay:0.6s;}
