--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -230,7 +230,7 @@
 						<div class="form form-invalid">
 							<div class="label">예치금액 <span class="right">5억5000만원</span></div>
 							<div class="input-wrap input-placeholder">
-								<input type="number" class="ar" placeholder="금액입력" aria-label="예치금액">
+								<input type="number" class="ar" placeholder="금액입력" aria-label="예치금액" pattern="[0-9]*" inputmode="decimal">
 								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								<div class="visible-placeholder">원</div>
 							</div>
