--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -681,7 +681,7 @@ button.flag-fluid span {margin-top:0;}
 .chatbody:not(:last-child) {margin-bottom:32px;}
 .chatbottom {display:flex;align-items:flex-end;}
 .message-text {position:relative;display:table;border-radius:8px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
-.message-text > *:not(:last-child) {margin-bottom:16px;}
+.message-text > *:not(:first-child) {margin-top: 16px;}
 .message-text .text {font-size:16px;font-weight:500;color:var(--typography-black);}
 .message-text ol.text {font-size:15px;color:var(--typography-gray);list-style-type:decimal;padding-left:16px;}
 .message-text .message-group {padding:0 4px;}
@@ -736,7 +736,7 @@ button.flag-fluid span {margin-top:0;}
 /* message-text */
 .message-text {max-width:100%;padding:24px 16px;}
 .message-text:not(:last-child) {margin-bottom:8px;}
-.message-text.left {float:left;clear:both;width:100%;}
+.message-text.left {float:left;clear:both;}
 .message-text.right {float:right;clear:both;padding:8px 16px;background-color:var(--deepblue-500);border-radius:22.5px;}
 .message-text.right .text {color:var(--typography-white);}
 .message-text.right {}
